fix for text and logo display on mobile

--- a/app/assets/stylesheets/mobile/style.css
+++ b/app/assets/stylesheets/mobile/style.css
@@ -737,24 +737,26 @@ span.label-block {
 /* CSS for Logotype on Tablets and Smartphones */
 .mobile-logo {
     z-index:-1;
-    width: 270px;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
     position:absolute;
-    right:0px;
-    margin-top: 15px;
+    right:10px;
+    margin-top: 25px;
     padding-bottom: 20px;
-    padding-right: 10px;
     font-size: 12px;
     color: #585858;
+    text-align: right;
 }
 
 /* For Smartphones (portrait and landscape) */
 @media only screen
 and (max-width: 480px) {
 
-    .mobile-logo {
+    /*.mobile-logo {
         display: none;
         visibility: hidden;
-    }
+    } */
     h1.title {
         color: #0099ef;
         font-size: 26px !important;
